# cuplc_records

./: .gitignore  README.md  config.json  lifters.json  log.txt  panda.py  pyproject.toml  record_log.txt  records.csv  requirements.txt  run.bash  script.py  test.py
src/: config.json  new_script.py  script.py
