[tool.poetry]
name = "cuplc-records"
version = "0.1.0"
description = "Compute and push CUPLC student and alumni records to the website from OpenPowerlifting data."
authors = ["bilal-chughtai <brchughtaii@gmail.com>"]
readme = "README.md"
packages = [{include = "cuplc_records"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
gspread = "^5.7.2"
df2gspread = "^1.0.4"
oauth2client = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
